# blockchain-satellite

./: .env  .env-docker  .gitignore  Cargo.toml  README.md  docker-compose.yml  env.example
.github/workflows/: rust.yml
DDL/: Sensors Arduino.postman_collection.json  Sensors Blockchain Rust.postman_collection.json  Sensors.postman_collection.json
DDL/mongodb/: 001_users.js  001_users_bk.js
DDL/mongodb/script_extractor/: README.md  bulk_blockchain.py
DDL/mysql/: sensordb_DDL.sql  update_database_ddl.sh
docker_system/docker_config/: Dockerfile_mongodb  Dockerfile_mysql  Dockerfile_rust
src/: config.rs  connection_data.rs  http_codes.rs  lib.rs  macros.rs  main.rs  messages.rs  typeinfo.rs  utils.rs
src/databases/: connector_mongodb.rs  connector_mysql.rs  mod.rs
src/modules/: mod.rs
src/modules/blockchain/: blockchain.rs  blockchain_manager.rs  blockchain_types.rs  connector_mongodb.rs  container_objects.rs  encryption.rs  encryption_helpers.rs  mod.rs  values.rs  values_manager.rs
src/modules/databases/: connector_mysql.rs  mod.rs
src/modules/login/: connection_data.rs  login.rs  login_manager.rs  mod.rs
src/modules/users/: mod.rs  users.rs  users_manager.rs
