[package]
name = "blockchain-rust"
version = "0.1.0"
edition = "2018"
include = ["src/modules/*", "Cargo.toml"]
exclude = ["target/*"]
authors = ["Sergio Martinez-Losa del Rincon <sergiomtzlosa@protonmail.com>", "Esteban Damian Gutierrez Mlot <esguti@protonmail.com>"]

[dependencies]
iron = "*"
router = "*"
mysql = "*"
rustc-serialize = "*"
dotenv = "0.10.0"
rust-crypto = "0.2.36"
rand = "0.3.0"
chrono = "0.4"
lazy_static = "1.4.0"
md5 = "0.6.1"
