[package]
name = "blockchain-rust"
version = "0.1.0"
edition = "2018"
include = ["src/modules/*", "Cargo.toml"]
exclude = ["target/*"]
authors = ["Sergio Martinez-Losa del Rincon <sergiomtzlosa@protonmail.com>", "Esteban Damian Gutierrez Mlot <esguti@protonmail.com>"]

[dependencies]
iron = "*"
router = "*"
mysql = "*"
rustc-serialize = "*"
dotenv = "0.10.0"
rust-crypto = "0.2.36"
lazy_static = "1.4.0"
url = "2.1.0"
mongodb = "0.3.9"
hex = "0.4.0"
base64 = "0.10.1"
serde_json = "1.0.41"
chrono = "0.4"
rand = "0.7.2"
merkle = "1.11.0"
ring = "^0.16.1"
